custom nodes: update to work with latest eclair